// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform alphabetizes the object if no transformation is provided 1`] = `
Array [
  "foo",
  Object {
    "bar": "foo",
    "qux": "baz",
  },
]
`;

exports[`transform uses the transformation by key 1`] = `
Array [
  "foo",
  "transformed",
]
`;
